compiler/tests/fail/stack_allocation/x86-64/no_region_stack_ptr.jazz
export
fn g () -> reg u64 {
  stack ptr u64[1] sp;
  reg u64 res;

  sp[0] = 0;
  res = sp[0];

  return res;
}
